--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,18 @@
   -webkit-text-size-adjust: 100%;
 }
 
+@property --t {
+  syntax: "<number>";
+  initial-value: 30;
+  inherits: true;
+}
+
+@property --k {
+  syntax: "<number>";
+  initial-value: 0;
+  inherits: true;
+}
+
 body {
   display: flex;
   gap: 1rem;
@@ -48,30 +60,21 @@ li[checked] {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
-}
-
 .row {
   display: flex;
   justify-content: center;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.code {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-a:hover {
-  color: #535bf2;
+#confirmations {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 div[id] {
@@ -84,9 +87,37 @@ img {
   max-height: 80px;
 }
 
+.loader {
+  width: 24px;
+  height: 24px;
+  border: 2px solid #575757;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1.5s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+} 
+
 .buttons {
   display: flex;
   gap: 10px;
+}
+
+.ok {
+  color: green;
+}
+
+.error {
+  color: red;
 }
 
 h1 {
